升级依赖库的版本